--- a/views/index.ejs
+++ b/views/index.ejs
@@ -22,6 +22,13 @@
                 <option value="opt1">評価1</option>
             </select>
             <p><input type="button" onclick="btnClick02()" value="評価を絞り込む"></p>
+                         <!--課題04-->
+                         <table id="graph"> 
+                            <tr id="graphTr">
+                                <th>年代</th>
+                                <th>人数</th>
+                            </tr>
+                         </table>
             <!--課題01  ブラウザに出力-->
             <table id="table">
                 <tr class="trClass">
