レイアウト変更

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -8,6 +8,8 @@
     <body>
         <h1>商品レビュー</h1>
         <!--課題02-->
+        <div id="rating-page">
+            <div id="selectBox">
         <select name="select">
             <option value="high">評価が高い順</option>
             <option value="low">評価が低い順</option>
@@ -22,6 +24,7 @@
             <option value="opt1">評価1</option>
         </select>
         <p><input type="button" onclick="btnClick02()" value="評価を絞り込む"></p>
+</div>
         <!--課題04-->
         <table id="graph">
             <tr id="graphTr">
@@ -40,7 +43,9 @@
                 <td>40代</td>
                 <td id="graphTd40"></td>
             </tr>
+             
         </table>
+    </div>
         <!--課題01  ブラウザに出力-->
         <table id="table">
             <tr class="trClass">
