--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -28,10 +28,20 @@ tr,th,td{
 
 #graph{
   border-collapse:  collapse; 
-  margin-bottom: 30px;
- margin-left: 30px;
+  margin-left: 60px;
+
 
 }
 #graphTr{
   background-color: yellow;
+}
+
+#rating-page {
+width: 640px;
+margin-bottom: 60px;
+margin-left: 60px;
+  display: flex;
+
+  
+;
 }
