レビューの新規追加機能 html

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -44,6 +44,24 @@
                     <td id="graphTd40"></td>
                 </tr>
             </table>
+ <!--課題05-->
+    <form id="newData" class="formData" >
+        <h2>レビューを入力</h2>
+        <p id="pid1">ユーザー名
+    <input id="newname1" type="text" name="newname1"  class="boxColor" placeholder="ユーザー名"></p>
+        <div id="listName1"></div>
+        <p>年齢
+    <input id="newname2" type="text" name="newname2"   class="boxColor" placeholder="年齢"></p>
+        <div id="listName2"></div>
+        <p>評価
+    <input id="newname3" type="text" name="newname3"  class="boxColor" placeholder="評価"></p>
+        <div id="listName3"></div>
+        <p>評価内容</p>
+    <textarea id="newname4" type="textarea" name="newname4"  class="boxColor" placeholder="評価内容"></textarea>
+        <div id="listName4"></div>
+        <p><input type="button" onclick="buttonClick()" value="追加" id="registerBtn"   ></p>
+    </form>
+
         </div>
         <!--課題01  ブラウザに出力-->
         <table id="table">
