レビューの新規追加機能 完成

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -47,13 +47,13 @@
             <!--課題05-->
             <form id="newData" class="formData">
                 <h2>レビューを入力</h2>
-                <p id="pid1">ユーザー名
+                <p id="pid1">ユーザー名 :
     <input id="newname1" type="text" name="newname1"  class="boxColor" placeholder="ユーザー名"></p>
                 <div id="listName1"></div>
-                <p>年齢
+                <p>年齢 : 
     <input id="newname2" type="text" name="newname2"   class="boxColor" placeholder="年齢"></p>
                 <div id="listName2"></div>
-                <p>評価
+                <p>評価 : 
             <select name="selectRating" id="newname3" name="newname3"  class="boxColor">
                 <option value="5">評価5</option>
                 <option value="4">評価4</option>
