--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -36,7 +36,7 @@ tr,th,td{
 }
 
 #rating-page {
-width: 640px;
+width: 694px;
 margin-bottom: 60px;
 margin-left: 60px;
   display: flex;
@@ -49,4 +49,9 @@ margin-left: 60px;
 
 h2{
   margin-top: 0;
+}
+
+#newname4{
+  width: 300px;
+  height: 60px;
 }
