--- a/views/index.ejs
+++ b/views/index.ejs
@@ -3,19 +3,39 @@
     <head>
         <meta charset="UTF-8">
         <title>商品レビューページ</title>
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.4.0/css/bootstrap-reboot.min.css">
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
         <link type="text/css" rel="stylesheet" href="css/style.css">
     </head>
     <body>
         <h1>商品レビュー</h1>
-        <!--課題02-->
         <div id="rating-page">
+            <div id="selectBox">
+                <p>並べ替え</p>
+                <select id="sortSelect">
+                    <option value="" disabled selected>選択してください</option>
+                    <option value="base" <% if (order==="base" ) { %> selected <% } %>> 標準</option>
+                    <option value="rating:desc" <% if (order==="desc" ) { %> selected <% } %>> 評価が高い順</option>
+                    <option value="rating:asc" <% if (order==="asc" ) { %> selected <% } %>> 評価が低い順</option>
+                </select>
+                <p>絞り込み</p>
+                <select id="searchRating">
+                    <option value="" disabled selected>選択してください</option>
+                    <option value="base" <% if(search==="base" ) {%> selected <% } %>>標準</option>
+                    <option value="rating:1" <% if(search==="1" ) {%> selected <% } %>>評価１</option>
+                    <option value="rating:2" <% if(search==="2" ) {%> selected <% } %>>評価２</option>
+                    <option value="rating:3" <% if(search==="3" ) {%> selected <% } %>>評価３</option>
+                    <option value="rating:4" <% if(search==="4" ) {%> selected <% } %>>評価４</option>
+                    <option value="rating:5" <% if(search==="5" ) {%> selected <% } %>>評価５</option>
+                </select>
+                <!--課題02
             <div id="selectBox">
                 <select name="select">
                     <option value="high">評価が高い順</option>
                     <option value="low">評価が低い順</option>
                 </select>
                 <p><input type="button" onclick="btnClick()" value="ソート"></p>
-                <!--課題03-->
+                課題03
                 <select name="selectRating">
                     <option value="opt5">評価5</option>
                     <option value="opt4">評価4</option>
@@ -24,8 +44,9 @@
                     <option value="opt1">評価1</option>
                 </select>
                 <p><input type="button" onclick="btnClick02()" value="評価を絞り込む"></p>
+            </div>-->
+                <!--課題04-->
             </div>
-            <!--課題04-->
             <table id="graph">
                 <tr id="graphTr">
                     <th>年代</th>
@@ -47,11 +68,9 @@
             <!--課題05-->
             <form action='/' id="newData" class="formData" method=POST>
                 <h2>レビューを入力</h2>
-                <p id="pid1">ユーザー名 :
-    <input id="newname1" type="text" name="username"  placeholder="ユーザー名"></p>
+                <p id="pid1">ユーザー名 :<input id="newname1" type="text" name="username"  placeholder="ユーザー名"></p>
                 <div id="listName1"></div>
-                <p>年齢 : 
-    <input id="newname2" type="text" name="age" placeholder="年齢"></p>
+                <p>年齢 : <input id="newname2" type="text" name="age" placeholder="年齢"></p>
                 <div id="listName2"></div>
                 <p>評価 : 
             <select name="rating" id="" name="rating" >
@@ -67,134 +86,147 @@
                 <p><button type="submit" onclick="return buttonClick()"  value="">追加</p>
             </form>
         </div>
-            <!--EX課題01-->
-            <select name="selectEX">
-                <option value="high">評価が高い順</option>
-                <option value="low">評価が低い順</option>
-            </select>
-            <p><input type="button" onclick="btnClickEX()" value="ソート"></p>
         <!--課題01  ブラウザに出力-->
         <table id="table">
-            <tr class="trClass">
-                <th>id</th>
-                <th>名前</th>
-                <th>年齢</th>
-                <th>評価</th>
-                <th>コメント</th>
-                <th>更新</th>
-            </tr>
-            <% for (let i=0; i <users.length; i++) { %>
-                <tr class="trclass">
-                    <td class="id"><%- users[i].id %></td>
-                    <td class="username"><%- users[i].username %></td>
-                    <td class="age"><%- users[i].age %></td>
-                    <td class="rating"><%- users[i].rating %></td>
-                    <td class="reason"><%- users[i].reason %></td>
-                    <td><a href="/edit/<%= users[i].id %>">更新</a></td>
+            <tbody id="reviewArea">
+                <tr class="trClass">
+                    <th>id</th>
+                    <th>名前</th>
+                    <th>年齢</th>
+                    <th>評価</th>
+                    <th>コメント</th>
+                    <th>更新</th>
                 </tr>
-                <% } %>
+                <% for (let i=0; i < filteredPersonas.length; i++) { %>
+                    <tr class="trclasss">
+                        <td class="id"><%- filteredPersonas[i].id %></td>
+                        <td class="username"><%- filteredPersonas[i].username %></td>
+                        <td class="age"><%- filteredPersonas[i].age %></td>
+                        <td class="rating"><%- filteredPersonas[i].rating %></td>
+                        <td class="reason"><%- filteredPersonas[i].reason %></td>
+                        <td><a href="/edit/<%=  filteredPersonas[i].id %>">更新</a></td>
+                    </tr>
+                    <% } %>
+            </tbody>
         </table>
     </body>
 </html>
 <script type="text/javascript">
+    const filteredPersonas = JSON.parse('<%= JSON.stringify(filteredPersonas) %>'.replace(/&#34;/g, '"'));
+    // グラフ描画用に全ユーザー分の情報を取得
+    const personasOrg = JSON.parse('<%= JSON.stringify(personasOrg) %>'.replace(/&#34;/g, '"'));
+    const reviewArea = document.querySelector("#reviewArea")
+    console.log(reviewArea)
+    // 「並べ替え」のセレクトボックス
+    const sortSelect = document.querySelector("#sortSelect")
+    // 「絞り込み」のセレクトボックス
+    const searchRating = document.querySelector("#searchRating")
+  
+    // 並べ替えを選択された場合のソート処理
+    sortSelect.addEventListener("change", sortAndSearchSelect)
+    // 絞り込みを選択された場合の処理
+    searchRating.addEventListener("change", sortAndSearchSelect)
+    const getTR = document.querySelectorAll(".trclasss")
+    console.log(getTR)
+
+    /*
+        並べ替えもしくは絞り込みを選択された場合のメソッド
+    */
     //課題02 評価値のソート機能
-    let userList = JSON.parse('<%= JSON.stringify(users) %>'.replace(/&#34;/g, '"'));
-    let getTR = document.getElementsByClassName("trclass")
-    let getTable = document.getElementById("table");
-    let tableRows = getTable.rows.length;
-    function btnClick() {
-        let select = document.querySelector('[name="select"]');
-        select.onchange
-        if (select.selectedIndex == 0) {
-            userList.sort(function (a, b) {
-                if (a.rating < b.rating) {
-                    return 1;
-                } else {
-                    return -1;
-                }
-            })
-        } else if (select.selectedIndex == 1) {
-            userList.sort(function (a, b) {
-                if (a.rating > b.rating) {
-                    return 1;
-                } else {
-                    return -1;
-                }
-            })
-        }
-        for (let i = 0; i < userList.length; i++) {
-            let id = userList[i].id;
-            let username = userList[i].username
-            let age = userList[i].age
-            let rating = userList[i].rating
-            let reason = userList[i].reason
-            getTR[i].innerHTML =
-                "<tr>" +
-                "<td class='id'>" +
-                id +
-                "</td>" +
-                "<td class='username'>" +
-                username +
-                "</td>" +
-                "<td class='age'>" +
-                age +
-                "</td>" +
-                "<td class='rating'>" +
-                rating +
-                "</td>" +
-                "<td class='reason'>" +
-                reason +
-                "</td>" +
-                "<td>" +
-           
-
-
-                "</td>" +
-                "</tr>";
-        }
-    };
-    //課題03 評価値の絞り込み機能
-    function btnClick02() {
-        let selectRating = document.querySelector('[name="selectRating"]');
-        selectRating.onchange
-        for (i = 0; i < userList.length; i++) {
-            if (selectRating.selectedIndex == 0) {
-                if (userList[i].rating == 5) {
-                    getTR[i].style.display = "";
-                } else {
-                    getTR[i].style.display = "none";
-                }
-            }
-            else if (selectRating.selectedIndex == 1) {
-                if (userList[i].rating == 4) {
-                    getTR[i].style.display = "";
-                } else {
-                    getTR[i].style.display = "none";
-                }
-            }
-            else if (selectRating.selectedIndex == 2) {
-                if (userList[i].rating == 3) {
-                    getTR[i].style.display = "";
-                } else {
-                    getTR[i].style.display = "none";
-                }
-            }
-            else if (selectRating.selectedIndex == 3) {
-                if (userList[i].rating == 2) {
-                    getTR[i].style.display = "";
-                } else {
-                    getTR[i].style.display = "none";
-                }
-            }
-            else if (selectRating.selectedIndex == 4) {
-                if (userList[i].rating == 1) {
-                    getTR[i].style.display = "";
-                } else {
-                    getTR[i].style.display = "none";
-                }
-            }
-        }
-    }
+    //   let getTR = document.getElementsByClassName("trclass")
+    //    let tableRows = reviewArea.rows.length;
+    //    function btnClick() {
+    //        let select = document.querySelector('[name="select"]');
+    //        select.onchange
+    //        if (select.selectedIndex == 0) {
+    //            personasOrg.sort(function (a, b) {
+    //                if (a.rating < b.rating) {
+    //                    return 1;
+    //                } else {
+    //                    return -1;
+    //                }
+    //            })
+    //        } else if (select.selectedIndex == 1) {
+    //            personasOrg.sort(function (a, b) {
+    //                if (a.rating > b.rating) {
+    //                    return 1;
+    //                } else {
+    //                    return -1;
+    //                }
+    //            })
+    //        }
+    //        for (let i = 0; i < personasOrg.length; i++) {
+    //            let id = personasOrg[i].id;
+    //            let username = personasOrg[i].username
+    //            let age = personasOrg[i].age
+    //            let rating = personasOrg[i].rating
+    //            let reason = personasOrg[i].reason
+    //            let update = "<a href='/edit/<%=  personasOrg[0].id %>'>更新</a>"
+    //            getTR[i].innerHTML =
+    //                "<tr>" +
+    //                "<td class='id'>" +
+    //                id +
+    //                "</td>" +
+    //                "<td class='username'>" +
+    //                username +
+    //                "</td>" +
+    //                "<td class='age'>" +
+    //                age +
+    //                "</td>" +
+    //                "<td class='rating'>" +
+    //                rating +
+    //                "</td>" +
+    //                "<td class='reason'>" +
+    //                reason +
+    //                "</td>" +
+    //                "<td>" +
+    //                update
+    //            "</td>" +
+    //                "</tr>";
+    //        }
+    //    };
+    //    //課題03 評価値の絞り込み機能
+    //    function btnClick02() {
+    //        let selectRating = document.querySelector('[name="selectRating"]');
+    //        selectRating.onchange
+    //        for (i = 0; i < personasOrg.length; i++) {
+    //            if (selectRating.selectedIndex == 0) {
+    //                if (personasOrg[i].rating == 5) {
+    //                    getTR[i].style.display = "";
+    //                } else {
+    //                    getTR[i].style.display = "none";
+    //                }
+    //            }
+    //            else if (selectRating.selectedIndex == 1) {
+    //                if (personasOrg[i].rating == 4) {
+    //                    getTR[i].style.display = "";
+    //                } else {
+    //                    getTR[i].style.display = "none";
+    //                }
+    //            }
+    //            else if (selectRating.selectedIndex == 2) {
+    //                if (personasOrg[i].rating == 3) {
+    //                    getTR[i].style.display = "";
+    //                } else {
+    //                    getTR[i].style.display = "none";
+    //                }
+    //            }
+    //            else if (selectRating.selectedIndex == 3) {
+    //                if (personasOrg[i].rating == 2) {
+    //                    getTR[i].style.display = "";
+    //                } else {
+    //                    getTR[i].style.display = "none";
+    //                }
+    //            }
+    //            else if (selectRating.selectedIndex == 4) {
+    //                if (personasOrg[i].rating == 1) {
+    //                    getTR[i].style.display = "";
+    //                } else {
+    //                    getTR[i].style.display = "none";
+    //                }
+    //            }
+    //        }
+    //    }
     //課題04 年代毎のグラフ作成
     let getGraphTd20 = document.getElementById("graphTd20")
     let getGraphTd30 = document.getElementById("graphTd30")
@@ -202,22 +234,22 @@
     let count1 = 0;
     let count2 = 0;
     let count3 = 0;
-    for (i = 0; i < userList.length; i++) {
-        if (userList[i].age >= 20 && userList[i].age <= 29) {
+    for (i = 0; i < personasOrg.length; i++) {
+        if (personasOrg[i].age >= 20 && personasOrg[i].age <= 29) {
             count1++
             getGraphTd20.innerHTML = count1 + "人"
         }
-        if (userList[i].age >= 30 && userList[i].age <= 39) {
+        if (personasOrg[i].age >= 30 && personasOrg[i].age <= 39) {
             count2++
             getGraphTd30.innerHTML = count2 + "人"
         }
-        if (userList[i].age >= 40 && userList[i].age <= 49) {
+        if (personasOrg[i].age >= 40 && personasOrg[i].age <= 49) {
             count3++
             getGraphTd40.innerHTML = count3 + "人"
         }
     }
     //課題05 レビューの新規追加機能
-    let newRow = getTable.insertRow(-1);
+    let newRow = reviewArea.insertRow(-1);
     let listName1 = document.getElementById("listName1");
     let listName2 = document.getElementById("listName2");
     let listName3 = document.getElementById("listName3");
@@ -251,32 +283,40 @@
         }
         return trueFalse;
     }
-//EX課題01
-    function btnClickEX() {
-        for (let i = 0; i < userList.length; i++) {
-            let id = userList[i].id;
-            let username = userList[i].username
-            let age = userList[i].age
-            let rating = userList[i].rating
-            let reason = userList[i].reason
-            getTR[i].innerHTML =
-                "<tr>" +
-                "<td class='id'>" +
-                id +
-                "</td>" +
-                "<td class='username'>" +
-                username +
-                "</td>" +
-                "<td class='age'>" +
-                age +
-                "</td>" +
-                "<td class='rating'>" +
-                rating +
-                "</td>" +
-                "<td class='reason'>" +
-                reason +
-                "</td>" +
-                "</tr>";
+    //EX課題01
+    function sortAndSearchSelect() {
+        let res = ""
+        let filterObj = []
+        // 絞り込みの値
+        let search = ""
+        // ソートの値
+        let order = ""
+          
+        // ソートに選択された値を検索
+        for (option of sortSelect.options) {
+            if (option.selected && option.value !== "") {
+                filterObj["order"] = option.value
+             
+            }
         }
-    };
+        
+        // 絞り込みに選択された値を検索
+        for (option of searchRating.options) {
+            if (option.selected && option.value !== "") {
+                filterObj["search"] = option.value
+            }
+        }
+        // 「order=rating:asc」「search=rating:1」のような形に
+        const filterArray = Object.keys(filterObj).map(function (key) {
+            return [`${key}=${filterObj[key]}`];
+        });
+        // 複数あれば、「order=asc+search=1」のような形に変換、なければカンマは削除
+        filterArray.length > 1 ? res = filterArray.join("+") : res = filterArray.join("")
+        // ソートしたユーザー情報でindexをレンダリングする
+        console.log(res) 
+        location.assign(`/${res}`)
+    }
+    /*
+*/
+
 </script>
