--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -60,3 +60,13 @@ h1{
   padding-top: 30px ;
   padding-bottom: 30px;
 }
+
+#btn{
+  width: 50px;
+  height: 30px;
+}
+
+p{
+  margin-top: 10px;
+  margin-bottom:10px;
+}
